// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader should display the sidebar on desktop 1`] = `
<nav
  class="app-header"
>
  <div
    class="container"
  >
    <div
      class="header-item"
    >
      <router-link-stub
        to="/"
      >
        <img
          alt="Lunie spaceship accelerating into a colourful space sky"
          class="header-item-logo"
          src="~assets/images/cosmos-wallet-logo.svg"
        />
        
        Lunie
      
      </router-link-stub>
       
      <!---->
    </div>
     
    <appmenu-stub />
  </div>
</nav>
`;

exports[`AppHeader should show the sidebar as a menu on mobile 1`] = `
<nav
  class="app-header mobile"
>
  <div
    class="container"
  >
    <div
      class="header-item"
    >
      <router-link-stub
        to="/"
      >
        <img
          alt="Lunie spaceship accelerating into a colourful space sky"
          class="header-item-logo"
          src="~assets/images/cosmos-wallet-logo.svg"
        />
        
        Lunie
      
      </router-link-stub>
       
      <div
        class="close-menu"
      >
        <i
          class="material-icons mobile-menu-action"
        >
          close
        </i>
      </div>
       
      <!---->
    </div>
     
    <appmenu-stub />
  </div>
</nav>
`;
